# bitget-python-sdk-api-packaged

./: consts.py  pyproject.toml
bitget/: client.py  utils.py
bitget/v1/mix/: account_api.py
bitget/v2/mix/: account_api.py
v2/mix/: market_api.py  order_api.py
